2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented authentication support for Shoutcast and Icecast
	servers in 'src/glassplayer/conn_xcast.cpp'.
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented authentication support for HLS servers in
	'src/glassplayer/conn_hls.cpp'.
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Removed debugging printf from 'src/glassplayer/conn_xcast.cpp'.
2016-11-23 Fred Gleason <fredg@paravelsystems.com>
	* Renamed Codec::Vorbis to Codec::Ogg in 'src/common/codec.h'.
2016-11-29 Fred Gleason <fredg@paravelsystems.com>
	* Added an Ogg codec in 'src/glassplayer/codec_ogg.cpp' and
	'src/glassplayer/codec_ogg.h'.
2016-11-29 Fred Gleason <fredg@paravelsystems.com>
	* Added OggOpus support in 'src/glassplayer/codec_ogg.cpp' and
	'src/glassplayer/codec_ogg.h'.
2016-11-29 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up error logging in 'src/glassplayer/codec_ogg.cpp'.
2016-11-29 Fred Gleason <fredg@paravelsystems.com>
	* Added new exit code '14' ['Invalid channel count'].
2016-12-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/codec_ogg.cpp' that caused
	incorrect framing parameters to be set when receiving Opus
	streams.
2016-12-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused an infinite loop when attempting to
	start a non-supported Ogg codec.
2016-12-01 Fred Gleason <fredg@paravelsystems.com>
	* Modified the Ogg codec to use dynamic library loading.
2016-12-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in 'configure.ac'.
2016-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a memory leak in 'src/glassplayergui/playmeter.cpp'.
2016-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Altered dynamic library targets to include major version numbers.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_alsa.cpp' that broke the
	build when compiling without ALSA support.